<package>
  <name>keyboard_control</name>
  <version>1.0.0</version>
  <description>keyboard_control</description>
  <maintainer email="apsarora@hotmail.com">Amanpreetsingh</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/keyboard_control</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Amanpreetsingh</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>rospy</build_depend>
  <build_depend>sesaw_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>rospy</run_depend>
  <run_depend>sesaw_msgs</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>rospy</test_depend> -->

</package>
